--- a/bootstrap/package.json
+++ b/bootstrap/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "main": "codegen.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx tsc && NODE_OPTIONS=--enable-source-maps node build/index.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "arg": "^5.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.12",
+    "typescript": "^5.4.5"
   }
 }
