--- a/compiler/package.json
+++ b/compiler/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "codegen.js",
   "scripts": {
-    "start": "npx tsc && node build.js && NODE_OPTIONS=--enable-source-maps node build/index.js",
-    "build": "npx tsc && node build.js && NODE_OPTIONS=--enable-source-maps"
+    "build": "npx tsc && NODE_OPTIONS=--enable-source-maps"
   },
   "author": "",
   "license": "ISC",
