--- a/vscode/package.json
+++ b/vscode/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "build": "npx tsc"
   },
-  "main": "./dist/src/index.js",
+  "main": "./build/index.js",
   "activationEvents": [
     "onLanguage:chadscript"
   ],
